# evo_alg

./: .gitignore  README.md  intro_algos_evolutionnaires.py  my_notebook.py  pyproject.toml
__marimo__/: intro_algos_evolutionnaires.html  intro_algos_evolutionnaires.ipynb  my_notebook.ipynb
__marimo__/session/: intro_algos_evolutionnaires.py.json  my_notebook.py.json
