[project]
name = "evo-alg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tabulate>=0.9.0",
]

[tool.pyright]
# Les cellules marimo sont des fonctions dont les imports sont des paramètres
# injectés (ex: def _(np, mo):). Pylance les traite comme des paramètres de
# type Unknown, ce qui génère une cascade de faux positifs à ignorer.
reportInvalidTypeExpression = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportGeneralTypeIssues = "none"
reportInvalidTypeForm = "none"
reportUnusedExpression = "none"
